# stihia-librechat

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  librechat.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docker/librechat/: start-with-generated-secrets.sh
src/stihia_librechat/: adapters.py  main.py  proxy.py  settings.py
tests/: test_adapters.py  test_main.py  test_proxy.py
