[project]
name = "stihia-librechat"
dynamic = ["version"]
requires-python = ">=3.12"
description = "Stihia guardrail proxy for LibreChat — transparent HTTP proxy with real-time threat detection"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "pydantic-settings",
    "httpx",
    "stihia",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0"

[tool.hatch.build.targets.wheel]
packages = ["src/stihia_librechat"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["stihia"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
